fix: dont show scrollbars in table cells (#5290)
(cherry picked from commit 10a866f8a88fca8d93942a26476e9aad64e1a8c8)

--- a/webui/react/src/components/Table/InteractiveTable.module.scss
+++ b/webui/react/src/components/Table/InteractiveTable.module.scss
@@ -8,7 +8,7 @@
   height: 60px;
 
   > td {
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
     white-space: nowrap;
   }
@@ -92,8 +92,7 @@
 }
 .cell {
   .rightClickableCellWrapper {
-    display: inline-table;
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
     width: 100%;
   }
