--- a/webui/react/src/components/TagList.module.scss
+++ b/webui/react/src/components/TagList.module.scss
@@ -13,6 +13,7 @@
   .tagPlus {
     background: var(--theme-colors-monochrome-17);
     border-style: dashed;
+    margin-right: 6px;
   }
   .tagPlus:hover,
   .tagEdit:hover {
@@ -37,7 +38,7 @@
     }
   }
   .tagInput {
-    margin: 0;
+    margin: 0 8px 0 0;
     top: -1px;
   }
 }
